--- a/.github/workflows/binne.yml
+++ b/.github/workflows/binne.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: test download artifact
+name: test download filmz
 
 # Controls when the workflow will run
 on:
