--- a/.github/workflows/binne.yml
+++ b/.github/workflows/binne.yml
@@ -27,7 +27,7 @@ jobs:
         
       # Runs a set of commands using the runners shell
       - name: getfilm 1
-        run: wget http://d2.o2tv.org/The%20Walking%20Dead%20-%20Dead%20City/Season%2001/The%20Walking%20Dead%20-%20Dead%20City%20-%20S01E01%20HD%20(TvShows4Mobile.Com)%20otv-hjup8.mp4
+        run: wget http://d2.o2tv.org/The%20Walking%20Dead%20-%20Dead%20City/Season%2001/The%20Walking%20Dead%20-%20Dead%20City%20-%20S01E01%20HD%20\(TvShows4Mobile.Com\)%20otv-hjup8.mp4
         
       - name: get film 2
         run: wget http://dl.google.com/android/repository/android-ndk-r12b-linux-x86_64.zip
