--- a/.github/workflows/buildghr.yml
+++ b/.github/workflows/buildghr.yml
@@ -19,6 +19,6 @@ jobs:
         go-version: 1.19
 
     - name: Build
-      run: go install github.com/tcnksm/ghr@latest
+      run: go get github.com/tcnksm/ghr@latest
     - name: lsdirp
       run: ls -R
