--- a/.github/workflows/buildghr.yml
+++ b/.github/workflows/buildghr.yml
@@ -22,7 +22,7 @@ jobs:
       run: go install github.com/tcnksm/ghr@latest
       
     - name: downlaod file
-      run: wget https://d.apkpure.com/b/APK/mega.privacy.android.app?versionCode=231490158
+      run: wget https://download.manjaro.org/kde/22.1.3/manjaro-kde-22.1.3-230529-linux61.iso
       
     - name: ls dirp
       run: ls -R
