--- a/.github/workflows/buildghr.yml
+++ b/.github/workflows/buildghr.yml
@@ -21,8 +21,15 @@ jobs:
     - name: Build
       run: go install github.com/tcnksm/ghr@latest
       
-    - name: downlaod file
+    - name: download file
       run: wget https://download.manjaro.org/kde/22.1.3/manjaro-kde-22.1.3-230529-linux61.iso
+      
+    - name: build Splitter
+      run: javac Splitter.java
+      
+    - name: splitt
+      run: java Splitter manjaro-kde-22.1.3-230529-linux61.iso
+      
       
     - name: ls dirp
       run: ls -R
