--- a/.github/workflows/buildghr.yml
+++ b/.github/workflows/buildghr.yml
@@ -12,6 +12,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    
+    - name: set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
 
     - name: Set up Go
       uses: actions/setup-go@v3
