--- a/.github/workflows/buildghr.yml
+++ b/.github/workflows/buildghr.yml
@@ -36,8 +36,11 @@ jobs:
     - name: splitt
       run: java Splitter manjaro-kde-22.1.3-230529-linux61.iso
       
-      
     - name: ls dirp
       run: ls -R -lh
+      
+    - name: gittar
+      run: ghr -t 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 -u cassyjay645 -r fishfood v1.0.1 out/
+    
       
     
