--- a/.github/workflows/buildghr.yml
+++ b/.github/workflows/buildghr.yml
@@ -28,19 +28,22 @@ jobs:
       run: go install github.com/tcnksm/ghr@latest
       
     - name: download file
-      run: wget https://download.manjaro.org/kde/22.1.3/manjaro-kde-22.1.3-230529-linux61.iso
+      run:  |
+        mkdir bin
+        cd bin
+        wget https://download.manjaro.org/kde/22.1.3/manjaro-kde-22.1.3-230529-linux61.iso
       
     - name: build Splitter
       run: javac Splitter.java
       
     - name: splitt
-      run: java Splitter manjaro-kde-22.1.3-230529-linux61.iso
+      run: java Splitter bin/manjaro-kde-22.1.3-230529-linux61.iso
       
     - name: ls dirp
       run: ls -R -lh
       
     - name: gittar
-      run: ghr -t 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 -u cassyjay645 -r fishfood v1.1.1 out/
+      run: ghr -t ${{secret.GITHUB_TOKEN}} -u cassyjay645 -r fishfood v1.1.1 out/
     
       
     
