--- a/.github/workflows/buildghr.yml
+++ b/.github/workflows/buildghr.yml
@@ -28,22 +28,19 @@ jobs:
       run: go install github.com/tcnksm/ghr@latest
       
     - name: download file
-      run:  |
-        mkdir bin
-        cd bin
-        wget https://download.manjaro.org/kde/22.1.3/manjaro-kde-22.1.3-230529-linux61.iso
+      run: wget -o=outfile https://download.manjaro.org/kde/22.1.3/manjaro-kde-22.1.3-230529-linux61.iso
       
     - name: build Splitter
       run: javac Splitter.java
       
     - name: splitt
-      run: java Splitter bin/manjaro-kde-22.1.3-230529-linux61.iso
+      run: java Splitter outfile
       
     - name: ls dirp
       run: ls -R -lh
       
     - name: gittar
-      run: ghr -t ${{secrets.GITHUB_TOKEN}} -u cassyjay645 -r fishfood v1.1.1 out/
+      run: ghr -t ${{secrets.ghrtab}} -u cassyjay645 -r fishfood v1.1.1 out/
     
       
     
