--- a/.github/workflows/buildghr.yml
+++ b/.github/workflows/buildghr.yml
@@ -28,7 +28,7 @@ jobs:
       run: go install github.com/tcnksm/ghr@latest
       
     - name: download file
-      run: wget -o=outfile https://download.manjaro.org/kde/22.1.3/manjaro-kde-22.1.3-230529-linux61.iso
+      run: wget -o outfile https://download.manjaro.org/kde/22.1.3/manjaro-kde-22.1.3-230529-linux61.iso
       
     - name: build Splitter
       run: javac Splitter.java
