--- a/.github/workflows/smeeksam.yml
+++ b/.github/workflows/smeeksam.yml
@@ -28,22 +28,19 @@ jobs:
       run: go install github.com/tcnksm/ghr@latest
       
     - name: download file
-      run: wget -o outfile https://download.manjaro.org/kde/22.1.3/manjaro-kde-22.1.3-230529-linux61.iso
+      run: wget https://download.manjaro.org/kde/22.1.3/manjaro-kde-22.1.3-230529-linux61.iso
       
     - name: build Splitter
       run: javac Splitter.java
       
     - name: splitt
-      run: java Splitter outfile
+      run: java Splitter manjaro-kde-22.1.3-230529-linux61.iso
       
     - name: ls dirp
       run: ls -R -lh
       
-    - name: gclone
-      run: git clone https://github.com/cassyjay645/fishfood
-      
     - name: gittar
-      run: ghr -t ${{secrets.ghrtab}} -u cassyjay645 -r fishfood @v1.1.1 out/
+      run: ghr -t ${{secrets.ghrtab}} -u cassyjay645 -r fishfood @v1.1.2 out/
     
       
     
