--- a/.github/workflows/smeeksam.yml
+++ b/.github/workflows/smeeksam.yml
@@ -5,6 +5,20 @@ name: build ghr
 
 on:
   workflow_dispatch:
+    inputs:
+      url: 
+        type: string 
+        required: true
+        description: url to download
+      filename:
+        type: string
+        required: false
+        default: ''
+      reltag:
+        type: string
+        description: release tag
+        required: false
+        default: ''
 
 jobs:
 
@@ -24,23 +38,27 @@ jobs:
       with:
         go-version: 1.19
 
-    - name: Build
-      run: go install github.com/tcnksm/ghr@latest
-      
-    - name: download file
-      run: wget https://download.manjaro.org/kde/22.1.3/manjaro-kde-22.1.3-230529-linux61.iso
+    - name: build ghr
+      run: go install https://github.com/cassyjay645/ghr@latest
       
     - name: build Splitter
       run: javac Splitter.java
       
+    - name: download file
+      run: | 
+        mkdir bin
+        cd bin
+        wget ${{ inputs.url }}
+    
     - name: splitt
-      run: java Splitter manjaro-kde-22.1.3-230529-linux61.iso
+      run: java Splitter bin
       
     - name: ls dirp
       run: ls -R -lh
       
     - name: gittar
-      run: ghr -t ${{secrets.ghrtab}} -u cassyjay645 -r fishfood @v1.1.3 out/
+      if: ${{inputs.reltag}} 
+      run: ghr -t ${{secrets.ghrtab}} -u cassyjay645 -r janefr ${{inputs.reltag}} out/
     
       
     
