--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,6 +28,6 @@ jobs:
     - name: Build dll
       run: javac dll.java
     - name: wget
-      run: java dll ${{inputs.url}} ${{inputs.fname}}
+      run: java dll "${{inputs.url}}"   "${{inputs.fname}}"
     - name: lsdirp
       run: ls -R
