--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,4 +31,4 @@ jobs:
     - name: wget
       run: java dll '${{ inputs.url }}' '${{inputs.fname}}'
     - name: lsdirp
-      run: ls -R
+      run: ls -R -lh
